src/app/app.component.css
.scroller-wrapper {
    position: relative;
    overflow-y: auto;
    top: 100px;
    left: 0;
    right: 0;
    bottom: 0;
    position: absolute;
    width: auto;
    height: auto;
    padding-bottom: 50px;
    padding-top: 20px;
}

.scroller-wrapper::-webkit-scrollbar {
    width: 15px;
    /* width of the entire scrollbar */
}

.scroller-wrapper::-webkit-scrollbar-track {
    opacity: 0%;
    /* color of the tracking area, set by setting background (if needed). */
}

.scroller-wrapper::-webkit-scrollbar-thumb {
    background-color: #2c4975;
    /* color of the scroll thumb */
    border-radius: 20px;
    /* roundness of the scroll thumb */
}

